# otto_FTAF

./: .gitignore  LICENSE.txt  README.md  exemplo.py  pyproject.toml  setup.py
otto_FTAF/: __init__.py
otto_FTAF.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
otto_FTAF/chem/: __init__.py  air.py  chem_tests.py  elem.py  molec.py
otto_FTAF/cycle/: __init__.py  alt_eng.py  crank_rod.py  otto.py
otto_FTAF/therm/: __init__.py  fuels.py  ideal_mix.py  props.py  therm_tests.py
